# phenocover

./: .gitignore  MANIFEST.in  NDVI_ Treatment Parcel - 0-data-2025-07-04 15_11_14.csv  README.md  config.json  config.yml  demo.py  field_location.geojson  pyproject.toml  requirements.txt  setup.py  wheat_phenology_analyzer.py  wheat_phenology_results.csv
phenocover/: cli.py  logging.py  utils.py  wheat_phenology_analyzer.py
phenocover/docs/: CLI_USAGE.md  INSTALL.md  QUICK_REFERENCE.md
